# HPC

./: .gitignore  .gitmodules  README.md  requirements.bat
astraPython/: CMakeLists.txt  setup.py
astraPython/src/: astraWrapper.cpp
astraStream/: CMakeLists.txt
astraStream/src/: CMakeLists.txt  stream.cpp  stream.h
data/datasets/: DynamicVal.npz  Static.npz  readme.md
data/models/: readme.md
hpc/: consts.py
hpc/core/: display.py  frame.py  interpolate.py  model.py  pose_estimation.py  preprocess.py  skeleton.py
hpc/data/: augment.py  bgrToRgb.py  createDataset.py  fillKeypoints.py  getStaticImages.py  makeLong.py  proceedVideo.py  recordVideo.py  viewImagesAsVideo.py
hpc/helpers/: annotsFromVideo.py  augmentAll.py  changePoseOrder.py  createDat.py  cutZFromNpz.py  distanceStats.py  editAll.py  interpolateAndFillPickles.py  longFromP.py  longToSmall.py  runVideo.py  staticFromLong.py  tests.py
hpc/run/: alpha_pose_api.py  camera.py  estimateVideo.py  run.py  test.py  wrapper.py
hpc/train/: train.py
src/: consts.py  frame.py  loop.py  main.py  poses.py  rgbdMap.py  skeleton.py
src/data/: augment.py  bgrToRgb.py  createDataset.py  fillKeypoints.py  getStaticImages.py  makeLong.py  proceedVideo.py  recordVideo.py  viewImagesAsVideo.py
src/dataCollect/: proceedVideo.py  pyTests.py  recordVideo.py  recordVideoTest.py  runCameraAstraSDK.py  runVideo.py  viewDataAsVideo.py
src/func/: consts.py  display.py  frame.py  model.py  preprocess.py  rgbdMap.py  skeleton.py
src/helpers/: annotsFromVideo.py  augmentAll.py  createDat.py  cutZFromNpz.py  (+6 more)
(+27 files in other folders)
